Fix wrong color on tel-links in ios

--- a/src/Public/assets/css/_main.scss
+++ b/src/Public/assets/css/_main.scss
@@ -11,3 +11,8 @@
 a {
   text-decoration: none;
 }
+
+a[href^='tel'] {
+  color: inherit; /* Inherit text color of parent element. */
+}
+
